# embedded_deformation

./: .gitignore  CMakeLists.txt  config.yaml
app/: embedded_deformation_sample.cpp
data/: output.ply
embedded_deformation/: CMakeLists.txt
embedded_deformation/include/containers/: ArraySlice.h  ArrayView.h  DeviceBufferArray.h  SynchronizeArray.h  convenience.cuh  device_array.hpp  device_memory.cpp  device_memory.hpp  kernel_containers.hpp
embedded_deformation/include/embedded_deformation/: costFunction.hpp  downsampling.hpp  embedDeform.hpp  getMinMax.hpp  nanoflannWrapper.hpp  options.hpp
embedded_deformation/include/imageProcessor/: common.h  common_types.hpp  common_utils.h  fetchInterface.h  global_configs.h  imageProcessor.h  logging.h  safe_call.hpp
embedded_deformation/include/math/: Quaternion.hpp  device_mat.h  eigen33.h  eigen33.hpp  eigen_device_transfer.h  numeric_limits.hpp  vector_ops.hpp
embedded_deformation/include/rigidSolver/: device_intrinsics.h  rigidSolver.h
embedded_deformation/src/embedded_deformation/: embedDeform.cpp
embedded_deformation/src/imageProcessor/: common.cu  common_utils.cu  fetchInterface.cpp  imageProcessor.cpp
embedded_deformation/src/math/: device_mat.cpp  eigen_device_transfer.cpp
embedded_deformation/src/rigidSolver/: rigidSolver.cpp  rigidSolver.cu
